feat(spanish-api): Introduce services
